Ensure that for Projective Selection, uses only 4 point
Signed-off-by: orazio petito <152110371+OrazioP26@users.noreply.github.com>