@@ -1,25 +1,33 @@
 package selector;
 
-import static selector.SelectionModel.SelectionState.*;
+import static selector.SelectionModel.SelectionState.NO_SELECTION;
+import static selector.SelectionModel.SelectionState.PROCESSING;
+import static selector.SelectionModel.SelectionState.SELECTED;
+import static selector.SelectionModel.SelectionState.SELECTING;
 
+import java.awt.AlphaComposite;
 import java.awt.Color;
 import java.awt.Dimension;
+import java.awt.Font;
 import java.awt.Graphics;
+import java.awt.Graphics2D;
 import java.awt.Point;
+import java.awt.Polygon;
+import java.awt.Rectangle;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.awt.event.MouseMotionListener;
+import java.awt.geom.Point2D;
 import java.awt.image.BufferedImage;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.util.List;
 import javax.swing.JComponent;
-import java.awt.Rectangle;
-import scissors.ImagePathsSnapshot;
+import selector.SelectionModel.SelectionState;
 
 /**
  * A transparent (overlay) component enabling interactive selection (aka "tracing") of an underlying
- * image.  Layout must ensure that our upper-left corner coincides with that of the underlying image
+ * image. Layout must ensure that our upper-left corner coincides with that of the underlying image
  * view.
  */
 public class SelectionComponent extends JComponent implements MouseListener, MouseMotionListener,
@@ -40,7 +48,7 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
 
     /**
      * The last observed position of the mouse pointer over this component, constrained to lie
-     * within the image area.  Must not alias a Point from a MouseEvent, as those objects may be
+     * within the image area. Must not alias a Point from a MouseEvent, as those objects may be
      * reused by future events.
      */
     private Point mouseLocation = new Point();
@@ -48,10 +56,10 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
     /* View parameters */
 
     /**
-     * The radius of a control point, in pixels.  Used both for rendering and for tolerance when
+     * The radius of a control point, in pixels. Used both for rendering and for tolerance when
      * selecting points with the mouse.
      */
-    private int controlPointRadius = 4;
+    private int controlPointRadius = 8;
 
     /**
      * The color used to draw the current selection path.
@@ -70,7 +78,7 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
 
     /**
      * Construct a new SelectionComponent that will participate in viewing and controlling the
-     * selection modeled by `model`.  View will update upon receiving property change events from
+     * selection modeled by `model`. View will update upon receiving property change events from
      * `model`.
      */
     public SelectionComponent(SelectionModel model) {
@@ -84,14 +92,10 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
 
     /**
      * Have this component view and control `newModel` instead of whichever model it was using
-     * previously.  This component will no longer react to events from the old model.  If a point
-     * from the previous selection was being moved, that interaction is discarded.
+     * previously. This component will no longer react to events from the old model.
      */
     public void setModel(SelectionModel newModel) {
-        // Implementer's note: this method is safe to call during construction.
-
         // Stop receiving updates from our current model
-        // (null check makes this save to call from the constructor)
         if (model != null) {
             model.removePropertyChangeListener(this);
         }
@@ -121,15 +125,17 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
     }
 
     /**
-     * Record `p` as the most recent mouse pointer location and update the view.  If `p` is outside
+     * Record `p` as the most recent mouse pointer location and update the view. If `p` is outside
      * of our model's image area, clamp `p`'s coordinates to the nearest edge of the image area.
      * This method does not modify or save a reference to `p` (meaning the client is free to mutate
      * it after this method returns, which Swing will do with Points used by MouseEvents).
      */
     private void updateMouseLocation(Point p) {
+        if (model.image() == null) return;
+
         // Clamp `p`'s coordinates to be within the image bounds and save them in our field
-        mouseLocation.x = Math.clamp(p.x, 0, model.image().getWidth()-1);
-        mouseLocation.y = Math.clamp(p.y, 0, model.image().getHeight()-1);
+        mouseLocation.x = Math.max(0, Math.min(p.x, model.image().getWidth() - 1));
+        mouseLocation.y = Math.max(0, Math.min(p.y, model.image().getHeight() - 1));
 
         // Update the view to reflect the new mouse location
         repaint();
@@ -139,7 +145,7 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
      * Return whether we are currently interacting with a control point of a closed selection.
      */
     private boolean isInteractingWithPoint() {
-        return model.state() == SELECTED && selectedIndex != -1;
+        return model.state() == SelectionState.SELECTED && selectedIndex != -1;
     }
 
     /**
@@ -148,6 +154,10 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
      */
     @Override
     public void paintComponent(Graphics g) {
+        super.paintComponent(g);
+
+        if (model.image() == null) return;
+
         List<PolyLine> segments = model.selection();
 
         // Draw perimeter
@@ -159,49 +169,27 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
         }
 
         // Draw live wire
-        if (model.state() == SELECTING && mouseLocation != null) {
+        if (model.state() == SelectionState.SELECTING && mouseLocation != null) {
             paintLiveWire(g);
         }
 
         // Draw handles
-        if (model.state() == SELECTED) {
+        if (model.state() == SelectionState.SELECTED) {
             paintControlPoints(g, segments);
         }
 
-        // New in A6: Paint processing progress (if we recognize its type)
-        if (model.state() == PROCESSING) {
-            Object progress = model.getProcessingProgress();
-            if (progress instanceof ImagePathsSnapshot) {
-                paintPathfindingProgress(g, (ImagePathsSnapshot) progress);
-            }
+        // Draw pasted content overlays if applicable
+        if (model instanceof ProjectiveSelectionModel) {
+            ProjectiveSelectionModel projModel = (ProjectiveSelectionModel) model;
+//            if (projModel.pastedContent != null) {
+//                // Optionally, draw bounding box or other indicators
+//            }
         }
-    }
 
-    // New in A6
-    /**
-     * Shade image pixels according to their current path search status (settled, frontier, or
-     * undiscovered).  Do nothing if there is no pending path solution.
-     */
-    private void paintPathfindingProgress(Graphics g, ImagePathsSnapshot pendingPaths) {
-        int settledColor = new Color(192, 192, 96, 128).getRGB();
-        int frontierColor = new Color(96, 96, 192, 128).getRGB();
-
-        Rectangle bounds = g.getClipBounds();
-        int width = Math.min(bounds.width, model.image().getWidth() - bounds.x);
-        int height = Math.min(bounds.height, model.image().getHeight() - bounds.y);
-
-        BufferedImage img = new BufferedImage(width, height, BufferedImage.TYPE_INT_ARGB);
-        for (int x = bounds.x; x < bounds.x + width; ++x) {
-            for (int y = bounds.y; y < bounds.y + height; ++y) {
-                Point p = new Point(x, y);
-                if (pendingPaths.settled(p)) {
-                    img.setRGB(x - bounds.x, y - bounds.y, settledColor);
-                } else if (pendingPaths.discovered(p)) {
-                    img.setRGB(x - bounds.x, y - bounds.y, frontierColor);
-                }
-            }
+        // Optionally, handle processing progress visualization
+        if (model.state() == SelectionState.PROCESSING) {
+            // Implement if needed
         }
-        g.drawImage(img, bounds.x, bounds.y, null);
     }
 
     /**
@@ -210,15 +198,12 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
      */
     private void paintSelectionPerimeter(Graphics g, List<PolyLine> segments) {
         g.setColor(selectionPerimeterColor);
+        Graphics2D g2 = (Graphics2D) g;
+        g2.setStroke(new java.awt.BasicStroke(2));
 
-        int[] xPoints = new int[segments.size()];
-        int[] yPoints = new int[segments.size()];
-
-        int i = 0;
         for (PolyLine line : segments) {
             int[] xs = line.xs();
             int[] ys = line.ys();
-
             g.drawPolyline(xs, ys, line.size());
         }
     }
@@ -231,37 +216,35 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
         g.setColor(liveWireColor);
         PolyLine line = model.liveWire(mouseLocation);
         g.drawPolyline(line.xs(), line.ys(), line.size());
-
-
-
-
     }
-
-
 
     /**
      * Draw filled circles on `g` centered at the control points between each of the selection path
-     * segments in `segments` using our control point color.  The circles' radius should be our
+     * segments in `segments` using our control point color. The circles' radius should be our
      * control point radius.
      */
     private void paintControlPoints(Graphics g, List<PolyLine> segments) {
         g.setColor(controlPointColor);
+        Graphics2D g2 = (Graphics2D) g;
+        g2.setStroke(new java.awt.BasicStroke(1));
+
         for (PolyLine segment : segments) {
             int[] xs = segment.xs();
             int[] ys = segment.ys();
 
-            g.fillOval(xs[0]- controlPointRadius, ys[0]- controlPointRadius,
+            // Draw start point
+            g.fillOval(xs[0] - controlPointRadius, ys[0] - controlPointRadius,
                     2 * controlPointRadius, 2 * controlPointRadius);
 
-            g.fillOval(xs[xs.length-1]- controlPointRadius, ys[ys.length-1]- controlPointRadius,
+            // Draw end point
+            g.fillOval(xs[xs.length - 1] - controlPointRadius, ys[ys.length - 1] - controlPointRadius,
                     2 * controlPointRadius, 2 * controlPointRadius);
-
         }
     }
 
     /**
      * Draw straight lines on `g` connecting our last-known mouse pointer location to the control
-     * points before and after our selected point.  Requires `selectedIndex` is in
+     * points before and after our selected point. Requires `selectedIndex` is in
      * [0..segments.size()).
      */
     private void paintMoveGuides(Graphics g, List<PolyLine> segments) {
@@ -272,19 +255,18 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
             if (selectedIndex == 0) {
                 firstPoint = segments.getLast().start();
             } else {
-                firstPoint = segments.get(selectedIndex-1).start();
+                firstPoint = segments.get(selectedIndex - 1).start();
             }
             g.drawLine(firstPoint.x, firstPoint.y, mouseLocation.x, mouseLocation.y);
             g.drawLine(secondPoint.x, secondPoint.y, mouseLocation.x, mouseLocation.y);
         }
-
     }
 
     /* Event listeners */
 
     /**
      * When mouse button 1 is clicked and a selection has either not yet been started or is still in
-     * progress, add the location of the point to the selection.  Note: `mousePressed()` and
+     * progress, add the location of the point to the selection. Note: `mousePressed()` and
      * `mouseReleased()` handle presses of button 1 when the selection is finished.
      * <p>
      * When mouse button 2 is clicked and a selection is in progress, finish the selection.
@@ -294,17 +276,17 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
      */
     @Override
     public void mouseClicked(MouseEvent e) {
+        if (model.image() == null) return;
+
         updateMouseLocation(e.getPoint());
 
-        if (e.getButton() == MouseEvent.BUTTON1 && (model.state() == NO_SELECTION ||
-                model.state() == SELECTING)) {
-            model.addPoint(mouseLocation);
-        }
-        else if (e.getButton() == MouseEvent.BUTTON2 && model.state() == SELECTING) {
+        if (e.getButton() == MouseEvent.BUTTON1 && (model.state() == SelectionState.NO_SELECTION ||
+                model.state() == SelectionState.SELECTING)) {
+            model.addPoint(new Point(mouseLocation));
+        } else if (e.getButton() == MouseEvent.BUTTON2 && model.state() == SelectionState.SELECTING) {
             model.finishSelection();
-        }
-        else if (e.getButton() == MouseEvent.BUTTON3 && (model.state() == SELECTING ||
-                model.state() == SELECTED)) {
+        } else if (e.getButton() == MouseEvent.BUTTON3 && (model.state() == SelectionState.SELECTING ||
+                model.state() == SelectionState.SELECTED)) {
             model.undo();
         }
     }
@@ -315,7 +297,7 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
      */
     @Override
     public void mouseMoved(MouseEvent e) {
-        if (model.state() == SELECTING) {
+        if (model.state() == SelectionState.SELECTING) {
             updateMouseLocation(e.getPoint());
         }
     }
@@ -323,13 +305,14 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
     /**
      * When a selection is in progress, or when we are interacting with a control point, update our
      * last-observed mouse location to the location of this event and repaint ourselves to draw a
-     * "live wire" to the mouse pointer.  (Note that mouseMoved events are not sent while dragging,
+     * "live wire" to the mouse pointer. (Note that mouseMoved events are not sent while dragging,
      * which is why this overlaps with the duties of that handler.)
      */
     @Override
     public void mouseDragged(MouseEvent e) {
-        if (model.state() == SELECTING || isInteractingWithPoint()) {
+        if (model.state() == SelectionState.SELECTING || isInteractingWithPoint()) {
             updateMouseLocation(e.getPoint());
+            repaint();
         }
     }
 
@@ -340,8 +323,11 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
     @Override
     public void mousePressed(MouseEvent e) {
         if (e.getButton() == MouseEvent.BUTTON1) {
-            if (model.state() == SELECTED) {
-                selectedIndex = model.closestPoint(e.getPoint(), controlPointRadius);
+            if (model.state() == SelectionState.SELECTED) {
+                selectedIndex = model.closestPoint(e.getPoint(), controlPointRadius * controlPointRadius);
+                if (selectedIndex != -1) {
+                    // Indicate that a point is being dragged
+                }
             }
         }
     }
@@ -353,17 +339,14 @@ public class SelectionComponent extends JComponent implements MouseListener, Mou
     @Override
     public void mouseReleased(MouseEvent e) {
         if (e.getButton() == MouseEvent.BUTTON1 && isInteractingWithPoint()) {
-            model.movePoint(selectedIndex, mouseLocation);
-            // No need to call `repaint()` ourselves, since moving the point will trigger a property
-            // change, which will then trigger a repaint when we observe it.
-
+            model.movePoint(selectedIndex, new Point(mouseLocation));
             // Stop interacting with the point
             selectedIndex = -1;
         }
     }
 
     /**
-     * Repaint to update our view in response to any property changes from our model.  Additionally,
+     * Repaint to update our view in response to any property changes from our model. Additionally,
      * if the "image" property changed, update our preferred size to match the new image size.
      */
     @Override
